--- a/TimeSheetApp/MainWindow.xaml
+++ b/TimeSheetApp/MainWindow.xaml
@@ -261,7 +261,7 @@
                     </Grid>
                 </Grid>
             </TabItem>
-            <TabItem Header="Кабинет руководителя">
+            <TabItem Header="Отчетность">
                 <Grid>
                     <Grid>
                         <Grid.ColumnDefinitions>
